--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "i": "^0.3.7",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
+    "mdb-react-ui-kit": "^6.1.0",
     "npm": "^9.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
